kubernetes/apps/development/tekton/config/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: development
spec:
  hostnames:
    - tekton.vzkn.eu
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: tekton-dashboard
          namespace: tekton-pipelines
          port: 9097
